--- a/requirements.txt
+++ b/requirements.txt
@@ -55,12 +55,13 @@ pycparser==2.20
 Pygments==2.6.1
 PyMySQL==0.10.1
 pyparsing==2.4.7
+pypiwin32==223
 pyrsistent==0.16.0
 pytesseract==0.3.4
 pytest==6.0.1
 python-dateutil==2.8.1
 pytz==2020.1
-pywin32>=223
+pywin32==228
 pywinpty==0.5.7
 pyzmq==19.0.1
 qtconsole==4.7.5
